<resources>
    <string name="rc_play_nextsession_loading">正在加载下一话,请稍等~</string>
    <string name="rc_play_loading_fail">数据加载失败,请重试！</string>
    <string name="rc_play_wlan">WLAN</string>
    <string name="rc_play_no">离线播放</string>
    <string name="rc_play_cmwap">CMWAP</string>
    <string name="rc_play_cmnet">CMNET</string>
    <string name="rc_textone">您已观看完本部动画:</string>
    <string name="rc_more_share">分享</string>
    <string name="rc_more_comment">评论</string>
    <string name="rc_more_next">下一话</string>
    <string name="rc_more_replay">重播</string>
    <string name="rc_more_clear">清晰</string>
    <string name="rc_more_high">高清</string>
    <string name="rc_more_flash">流畅</string>
    <string name="rc_more_collect">收藏</string>
    <string name="rc_more_label">书签</string>
    <string name="rc_more_flower">鲜花</string>
    <string name="rc_more_egg">鸡蛋</string>
    <string name="rc_app_name_cn">动画播放器</string>
    <string name="rc_operate_failue">操作失败</string>
    <string name="rc_no_play_object">播放对象不存在</string>
    <string name="rc_get_data_failure">获取数据失败</string>
    <string name="rc_play_completion">播放结束</string>
    <string name="rc_section">分段</string>
    <string name="rc_ok">确定</string>
    <string name="rc_validate">确认</string>
    <string name="rc_quit">退出</string>
    <string name="rc_publish">发布</string>
    <string name="rc_cancel">取消</string>
    <string name="rc_prompt">提示</string>
    <string name="rc_is_exit">退出动画播放器？</string>
    <string name="rc_loading_now">正在加载...</string>
    <string name="rc_favorite_failure">咦，网络好像不给力，请稍后重试~</string>
    <string name="rc_favorite_inteface_failure">关键时刻掉链子了，程序猿正在努力修补中！</string>
    <string name="rc_mark_failure">咦，网络好像不给力，请稍后重试~</string>
    <string name="rc_comment_failure">咦，网络好像不给力，请稍后重试~</string>
    <string name="rc_add_egg_failure">咦，网络好像不给力，请稍后重试~</string>
    <string name="rc_add_flower_failure">咦，网络好像不给力，请稍后重试~</string>
    <string name="rc_blue_definition">蓝光</string>
    <string name="rc_super_definition">超清</string>
    <string name="rc_high_definition">高清</string>
    <string name="rc_standard_definition">标清</string>
    <string name="rc_low_definition">流畅</string>
    <string name="rc_people_look">大家都在看:</string>
    <string name="rc_exit_play">退出播放？</string>
    <string name="rc_screen_lock">手机屏幕和返回键已锁定！</string>
    <string name="rc_screen_unlock">手机屏幕和返回键已解锁！</string>
    <string name="rc_no_nextsession_play_online">下一集未下载，请确认是否在线观看下一集？</string>
    <string name="rc_player_no_support_HD">该播放器暂不支持高清播放!</string>
    <string name="rc_mms_share">短信</string>
    <string name="rc_sms_share">彩信</string>
    <string name="rc_comment">评论</string>
    <string name="rc_download">下载</string>
    <string name="rc_collection">收藏</string>
    <string name="rc_caninputtxt">还可以输入140字</string>
    <string name="rc_commentname">撰写评论</string>
    <string name="rc_commentHint">请在此输入你的评论(限140字)</string>
    <string name="rc_add_download_background">已为您添加到后台下载</string>
    <string name="rc_comment_content_is_empty">评论内容不能为空</string>
    <string name="rc_mms_sms_share_content">,很精彩，想和你分享一下，地址：</string>
    <string name="rc_mms_sms_share_content_pre">我正在观看</string>
    <string name="rc_network_disable">无网络，请联网。</string>
    <string name="rc_content_title_format">《%1$s》</string>
    <string name="rc_network_switch_tip">检测到网络出现变化，请退出后重试。</string>
    <string name="rc_offline_not_support">离线播放下不支持该功能。</string>
    <string name="rc_buffering_wait">正在缓冲，请稍候...</string>
    <string name="rc_finish_session">已经是下载的最后一集了</string>
    <string name="rc_login_try_again">请登录后再试</string>
    <string name="rc_no_network_set_or_wait">网络还没连接呢，请检查网络~</string>
    <string name="rc_send">发送</string>
    <string name="rc_close">关闭</string>
    <string name="rc_share2Renren">分享到人人网</string>
    <string name="rc_share2TencentWeibo">分享到腾讯微博</string>
    <string name="rc_share2SinaWeibo">分享到新浪微博</string>
    <string name="rc_txt_btn_cancel">取　消</string>
    <string name="rc_desc">正序</string>
    <string name="rc_asc">倒序</string>
    <string name="rc_Tplayer_cn">Tplayer</string>
    <string name="rc_domain_name_resolving_cn">正在解析域名...</string>
    <string name="rc_DNS_Failed_cn">无法解析域名</string>
    <string name="rc_yes_cn">是</string>
    <string name="rc_no_cn">否</string>
    <string name="rc_tips_cn">提示</string>
    <string name="rc_net_connecting_cn">正在连接服务器...</string>
    <string name="rc_invalid_addr_cn">无效播放地址</string>
    <string name="rc_nosupport_fast_playback_cn">本节目不支持快退操作</string>
    <string name="rc_nosupport_pause_cn">本节目不支持暂停操作</string>
    <string name="rc_nosupport_fast_forward_cn">本节目不支持快进操作</string>
    <string name="rc_live_cn">直播</string>
    <string name="rc_buffering_cn">缓冲中...</string>
    <string name="rc_playing_cn">正在播放</string>
    <string name="rc_buffered_cn">正在缓冲：[count]</string>
    <string name="rc_play_completed_cn">播放完成</string>
    <string name="rc_memory_insufficient_cn">内存不足！</string>
    <string name="rc_equipment_error_cn">初始化设备出错！</string>
    <string name="rc_file_not_exist_cn">播放器库文件不存在！</string>
    <string name="rc_init_stream_error_cn">初始化流失败！</string>
    <string name="rc_network_error_cn">网络连接失败！</string>
    <string name="rc_reqire_authorized_cn">无网络连接权限！</string>
    <string name="rc_network_timeout_cn">网络连接超时！</string>
    <string name="rc_format_error_cn">媒体格式错误！</string>
    <string name="rc_format_unsupported_cn">网络异常，请重试！</string>
    <string name="rc_unknown_error_cn">未知错误！</string>
    <string name="rc_play_error_cn">播放出错</string>
    <string name="rc_play_pause_cn">播放暂停</string>
    <string name="rc_unable_play_cn">无法播放</string>
    <string name="rc_buffering_and_wait_cn">正在缓冲，请稍候...</string>
    <string name="rc_nosupport_this_action_cn">本节目不支持此操作</string>
    <string name="rc_fast_play_wait_cn">正在快进，请稍后...</string>
    <string name="rc_fast_back_wait_cn">正在快退，请稍后...</string>
    <string name="rc_loading_cn">加载中...</string>
    <string name="rc_play_from_bp_cn">是否从上次播放位置开始继续播放?</string>
    <string name="rc_next_exit_hint">下次不再提示?</string>
    <string name="rc_new_hint1">漫赏天下动漫</string>
    <string name="rc_new_hint2">正在努力加载中，请稍候...</string>
    <string name="rc_zero_percent">0%</string>
    <string name="rc_tanmu_sent_hint">亲，每次发送不能超过30个字哦！</string>
    <string name="rc_tanmu_switch">弹幕开关</string>
    <string name="rc_tanmu_put">弹幕发送</string>
    <string name="rc_tanmu_shield">弹幕屏蔽</string>
    <string name="rc_tanmu_guest">游客</string>
    <string name="rc_tanmu_color">彩色</string>
    <string name="rc_tanmu_play_setting">播放设置</string>
    <string name="rc_tanmu_textScale">字号缩放</string>
    <string name="rc_tanmu_density">密度调节</string>
    <string name="rc_tanmu_speed">速度调节</string>
    <string name="zk_hello">Hello World, Activity_Move!</string>
    <string name="zk_app_name">漫画播放器</string>
    <string name="zk_menu_pause">暂停</string>
    <string name="zk_smsString">欢迎体验手机动漫:wap.dm.10086.cn</string>
    <string name="zk_currutn_loaidng">正在载入....</string>
    <string name="zk_kuai">快速</string>
    <string name="zk_zhong">中速</string>
    <string name="zk_man">慢速</string>
    <string name="zk_xuanji">选集</string>
    <string name="zk_autoplayer">自动播放</string>
    <string name="zk_model_cmep">卷纸模式</string>
    <string name="zk_model_cmmh">分图模式</string>
    <string name="zk_shuqian">书签</string>
    <string name="zk_shouchang">收藏</string>
    <string name="zk_fengxiang">分享</string>
    <string name="zk_shonghua">鲜花</string>
    <string name="zk_jidan">鸡蛋</string>
    <string name="zk_exit">返回</string>
    <string name="zk_screenSeeting">亮度调节</string>
    <string name="zk_leftHabit">左手习惯</string>
    <string name="zk_gonepage">隐藏页码</string>
    <string name="zk_gonetucao">显示吐槽</string>
    <string name="zk_ganying">重力感应锁</string>
    <string name="zk_exit_sure">漫画播放退出确认框</string>
    <string name="zk_auto_play_interval">隐藏页码</string>
    <string name="zk_delayed_ifno">请输入间隔时间(S)</string>
    <string name="zk_setting">设置</string>
    <string name="zk_mybookmark">我的书签</string>
    <string name="zk_fanye">滑屏翻页</string>
    <string name="zk_fanyerecommend">使用滑动手势翻页。</string>
    <string name="zk_radio">音量键翻页</string>
    <string name="zk_radiorecommend">按音量上键翻上一页，按音量下键翻下一页。</string>
    <string name="zk_lefthand">左手观看模式</string>
    <string name="zk_lefthandrecommend">点击右侧或向左滑动翻上一页，点击左侧或向右滑动翻下一页。</string>
    <string name="zk_gonepagerecommend">隐藏页码，隐藏状态栏。</string>
    <string name="zk_tucaorecommend">关闭吐槽内容显示</string>
    <string name="zk_ganying_detail">关闭将无法使用感应功能。</string>
    <string name="zk_exit_detail">打开则按返回键弹出确认框，关闭则按返回不弹出确认框。</string>
    <string name="zk_light">亮度调整</string>
    <string name="zk_nextplay">下一话</string>
    <string name="zk_send">发送</string>
    <string name="zk_close">关闭</string>
    <string name="zk_txt_btn_cancel">取　消</string>
    <string name="zk_txt_btn_confirm">确　定</string>
    <string name="zk_share2Renren">分享到人人网</string>
    <string name="zk_share2TencentWeibo">分享到腾讯微博</string>
    <string name="zk_share2SinaWeibo">分享到新浪微博</string>
    <string name="zk_share2sina">新浪微博</string>
    <string name="zk_share2tencent">腾讯微博</string>
    <string name="zk_share2renren">人人网</string>
    <string name="zk_share2sms">短信分享</string>
    <string name="zk_share2mms">彩信分享</string>
    <string name="zk_share2more">更多分享</string>
    <string name="zk_dialog_delete_text">删除选中的内容？</string>
    <string name="zk_exitsystem">下次不再提醒？</string>
    <string name="zk_exitsystemtext">大家都在看：</string>
    <string name="zk_exit_collect">收藏</string>
    <string name="zk_exit_comment">评论</string>
    <string name="zk_exit_nextplay">下一话</string>
    <string name="zk_exit_share">分享</string>
    <string name="zk_exit_replay">重新观看</string>
    <string name="zk_comment">评论</string>
    <string name="qihoo360_app_label">360手机杀毒</string>
    <string name="qihoo360_app_name"> 360杀毒</string>
    <string name="qihoo360_tips">提示</string>
    <string name="qihoo360_clear_virus_pkg_init">"正在清理 %1$d/%2$d
"</string>
    <string name="qihoo360_clear_virus_pkg">"一键清理……%2$d/%3$d
%1$s"</string>
    <string name="qihoo360_setting">设置</string>
    <string name="qihoo360_dialog_yes">确认</string>
    <string name="qihoo360_dialog_cancel">取消</string>
    <string name="qihoo360_btn_default">默认</string>
    <string name="edit_phone_prompt">账号：11位移动手机号码</string>
    <string name="edit_email_prompt">账号：邮箱地址</string>
    <string name="edit_pwd_prompt">密码：6~12位数字、字母</string>
    <string name="edit_pwd_confirm_prompt">确认密码：再次输入密码</string>
    <string name="digits_numberletter">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="edit_pwd_accept">@string/digits_numberletter</string>
    <string name="hint_verify">短信验证码</string>
    <string name="hint_email_verify">验证码</string>
    <string name="change_verification">换一张</string>
    <string name="regiser_sms_button">快速登录</string>
    <string name="get_verify">立即获取</string>
    <string name="register_agreement_hint">我已阅读并接受声明内容</string>
    <string name="register_automms">自动输入验证码</string>
    <string name="register_agreement">《使用协议》</string>
    <string name="register_confirm">确定</string>
    <string name="tips_get_verify">点击“立即获取”按钮您的手机会收到一条验证码短信，使用自动输入功能系统会读取您的验证码短信。</string>
    <string name="tips_register_sms">注：移动用户可以点此按钮，通过本机发送免费短信实现免输入快速登录。</string>
    <string name="setting_anime_watch_auto_desc">智能模式下，WLAN/4G网络优先播放高清格式，2G/3G网络优先播放标清格式</string>
    <string name="setting_anime_download_auto_desc">智能模式下，WLAN/4G网络优先下载高清格式，2G/3G网络优先下载清晰格式</string>
    <string name="anime_quality_auto">智能</string>
    <string name="anime_quality_bd">蓝光</string>
    <string name="anime_quality_uhd">超清</string>
    <string name="anime_quality_hd">高清</string>
    <string name="anime_quality_sd">标清</string>
    <string name="anime_quality_ld">流畅</string>
    <string name="tip_uniauth_register">您将注册移动统一通行证，通行证帐号可同时在动漫、音乐、游戏、视频和阅读五个移动业务之间进行登录。</string>
    <string name="edit_new_pwd_prompt">新密码：6~12位数字、字母</string>
</resources>