<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/activityBackgroundStyle">
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/tip_uniauth_register" style="@style/color888888dp12" />
        <TextView android:textSize="12.0sp" android:textColor="@color/tip_color" android:gravity="center_horizontal" android:id="@id/err_tip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text=" " />
        <LinearLayout android:orientation="vertical" android:background="@drawable/input_bg" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/edt_user" android:background="@drawable/login_edit_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:hint="@string/edit_phone_prompt" android:maxLength="11" android:drawableLeft="@drawable/ic_32_phone" android:drawablePadding="4.0dip" android:inputType="phone" android:imeOptions="actionNext" style="@style/color444444sp16" />
            <EditText android:id="@id/edt_pwd" android:background="@drawable/login_edit_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="12.0dip" android:hint="@string/edit_pwd_prompt" android:maxLength="12" android:drawableLeft="@drawable/ic_32_key" android:drawablePadding="4.0dip" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/color444444sp16" />
            <EditText android:id="@id/edt_pwd_confirm" android:background="@drawable/login_edit_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="12.0dip" android:hint="@string/edit_pwd_confirm_prompt" android:maxLength="12" android:drawableLeft="@drawable/ic_32_key" android:drawablePadding="4.0dip" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/color444444sp16" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                <EditText android:id="@id/edt_verify" android:background="@drawable/login_edit_selector" android:layout_width="0.0dip" android:layout_height="48.0dip" android:hint="@string/hint_verify" android:maxLength="6" android:digits="0123456789" android:drawableLeft="@drawable/ic_verify" android:drawablePadding="4.0dip" android:layout_weight="1.0" android:inputType="number" android:imeOptions="actionDone" style="@style/color444444sp16" />
                <Button android:id="@id/btn_get_verify" android:background="@drawable/basic_btn_selector" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginLeft="5.0dip" android:minWidth="120.0dip" android:text="@string/get_verify" style="@style/color444444sp16" />
            </LinearLayout>
            <CheckBox android:textSize="14.0dip" android:textColor="#ff666666" android:id="@id/ckb_automms" android:paddingLeft="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:button="@null" android:text="@string/register_automms" android:drawableLeft="@drawable/checkbox_selector" android:drawablePadding="5.0dip" />
            <TextView android:textSize="16.0dip" android:textColor="#ff666666" android:id="@id/tips_get_verify" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/tips_get_verify" />
        </LinearLayout>
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
            <CheckBox android:textSize="14.0dip" android:textColor="#ff666666" android:id="@id/ckb_agreement" android:paddingLeft="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/register_agreement_hint" android:drawableLeft="@drawable/checkbox_selector" android:drawablePadding="5.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textSize="14.0dip" android:textColor="@drawable/login_link_selector" android:id="@id/txt_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_agreement" android:layout_toRightOf="@id/ckb_agreement" android:layout_centerVertical="true" />
        </RelativeLayout>
        <Button android:id="@id/btn_confirm" android:background="@drawable/org_btn_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="20.0dip" android:text="@string/register_confirm" style="@style/popTitleWhiteStyle" />
        <Button android:id="@id/btn_register_sms" android:background="@drawable/org_btn_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="10.0dip" android:text="@string/regiser_sms_button" style="@style/popTitleWhiteStyle" />
        <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:text="@string/tips_register_sms" style="@style/color888888sp12" />
    </LinearLayout>
</ScrollView>
