<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/activityBackgroundStyle">
        <TextView android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/tip_uniauth_register" style="@style/color888888dp12" />
        <TextView android:textSize="12.0sp" android:textColor="@color/tip_color" android:gravity="center_horizontal" android:id="@id/err_tip" android:visibility="invisible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text=" " />
        <LinearLayout android:orientation="vertical" android:background="@drawable/input_bg" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/edt_user" android:background="@drawable/login_edit_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:hint="@string/edit_email_prompt" android:singleLine="true" android:drawableLeft="@drawable/ic_32_mail" android:drawablePadding="4.0dip" android:imeOptions="actionNext" style="@style/color444444sp16" />
            <EditText android:id="@id/edt_pwd" android:background="@drawable/login_edit_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="12.0dip" android:hint="@string/edit_pwd_prompt" android:singleLine="true" android:maxLength="12" android:digits="@string/edit_pwd_accept" android:drawableLeft="@drawable/ic_32_key" android:drawablePadding="4.0dip" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/color444444sp16" />
            <EditText android:id="@id/edt_pwd_confirm" android:background="@drawable/login_edit_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="12.0dip" android:hint="@string/edit_pwd_confirm_prompt" android:singleLine="true" android:maxLength="12" android:digits="@string/edit_pwd_accept" android:drawableLeft="@drawable/ic_32_key" android:drawablePadding="4.0dip" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/color444444sp16" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
                <EditText android:id="@id/edt_verification" android:background="@drawable/login_edit_selector" android:layout_width="110.0dip" android:layout_height="48.0dip" android:hint="@string/hint_email_verify" android:singleLine="true" android:maxLength="6" android:digits="@string/digits_numberletter" android:drawableLeft="@drawable/ic_verify" android:drawablePadding="4.0dip" android:imeOptions="actionDone" style="@style/color444444sp16" />
                <FrameLayout android:layout_width="0.0dip" android:layout_height="48.0dip" android:layout_marginLeft="5.0dip" android:layout_weight="1.0">
                    <ImageView android:layout_gravity="center" android:id="@id/img_email_verification" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitCenter" />
                    <ProgressBar android:layout_gravity="center" android:id="@id/verification_progressBar" android:layout_width="@dimen/loading_small_width" android:layout_height="@dimen/loading_small_height" android:indeterminate="false" android:indeterminateDrawable="@drawable/wait_progress_small_animation" />
                </FrameLayout>
                <TextView android:textSize="15.0dip" android:textColor="@color/btn_text_selector" android:gravity="center" android:id="@id/get_email_verification" android:paddingLeft="10.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/change_verification" />
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
            <CheckBox android:textSize="14.0dip" android:textColor="#ff666666" android:id="@id/ckb_agreement" android:paddingLeft="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:button="@null" android:text="@string/register_agreement_hint" android:drawableLeft="@drawable/checkbox_selector" android:drawablePadding="5.0dip" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
            <TextView android:textSize="14.0dip" android:textColor="@drawable/login_link_selector" android:id="@id/txt_agreement" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/register_agreement" android:layout_toRightOf="@id/ckb_agreement" android:layout_centerVertical="true" />
        </RelativeLayout>
        <Button android:id="@id/email_register_confirm" android:background="@drawable/org_btn_selector" android:layout_width="fill_parent" android:layout_height="48.0dip" android:layout_marginTop="20.0dip" android:text="@string/register_confirm" style="@style/popTitleWhiteStyle" />
    </LinearLayout>
</ScrollView>
