<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:id="@id/rc_alert_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="15.0dip" android:layout_marginBottom="15.0dip" android:text="@string/rc_tips_cn" />
    <View android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textSize="16.0sp" android:id="@id/rc_alert_content" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="15.0dip" android:text="@string/rc_play_from_bp_cn" />
    <LinearLayout android:orientation="horizontal" android:background="#ff4f4f4f" android:padding="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/rc_alert_btnCancel" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/rc_no_cn" android:layout_weight="1.0" />
        <Button android:id="@id/rc_alert_btnConfirm" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/rc_yes_cn" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
